--- a/app/src/main/res/menu/menu_terminal.xml
+++ b/app/src/main/res/menu/menu_terminal.xml
@@ -9,4 +9,8 @@
     <item
         android:id="@+id/newline"
         android:title="Newline Mode" />
+    <item
+        android:id="@+id/sendCurrentTime"
+        android:title="Send Current Time" />
+
 </menu>
